complete visual button actions